--- a/02-cicloVidaAct/app/src/main/res/values-es/strings.xml
+++ b/02-cicloVidaAct/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text1">Text with port</string>
+
+    <string name="saludo">Hola Mundo</string>
 </resources>
