--- a/02-cicloVidaAct/app/src/main/res/values/strings.xml
+++ b/02-cicloVidaAct/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">2024ASWGR2XACL</string>
+    <string name="saludo">Hello World</string>
+
     <string-array name="string_array_opciones">
         <item>Lunes</item>
         <item>Martes</item>
         <item>Miercoles</item>
     </string-array>
+
 </resources>
